--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pasmo",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.3",
   "main": "index.js",
-  "license": "GPL-2.0+",
+  "license": "GPL-3.0",
   "author": "Steven Robertson <stever@hey.com>",
   "description": "Emscripten conversion for Pasmo, a multi-platform Z80 cross-assembler.",
   "keywords": [
@@ -12,8 +12,8 @@
   ],
   "homepage": "https://github.com/stever/pasmo#readme",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/stever/pasmo.git"
+    "type": "git",
+    "url": "https://github.com/stever/pasmo.git"
   },
   "bugs": {
     "url": "https://github.com/stever/pasmo/issues"
