--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /cmake-build-debug/
 /dist/
 /node_modules/
+/src/CMakeFiles/
+/src/CMakeCache.txt
+/src/cmake_install.cmake
+/src/Makefile
+/src/pasmo
+/src/input.asm
