--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:release": "mkdirp build && cd build && emcmake cmake -DCMAKE_BUILD_TYPE=Release .. && make && cp-cli pasmo.js ../dist/pasmo.js",
     "clean": "del-cli build",
     "clean:all": "del-cli build dist",
-    "test": "jest --silent=false",
+    "test": "jest --noStackTrace",
     "publish-pkg": "npm publish --access public"
   },
   "devDependencies": {
@@ -66,5 +66,6 @@
     "plugins": [
       "@babel/plugin-transform-runtime"
     ]
-  }
+  },
+  "dependencies": {}
 }
