--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "-Wall")
 
 if (EMSCRIPTEN)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --pre-js ../src/pre.js --post-js ../src/post.js -s MODULARIZE=1 -s SINGLE_FILE=1 -s ENVIRONMENT='web'")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --pre-js ../src/pre.js --post-js ../src/post.js -s MODULARIZE=1 -s SINGLE_FILE=1 -s ENVIRONMENT='web' -fexceptions")
 endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
